Fix overflow issues with session id.

--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,8 @@ img {
     display: flex;
     flex-direction: row;
 
+    flex-wrap: wrap;
+
     gap: 1rem;
 
     background-color: rgb(0, 0, 0, 0.25);
@@ -210,6 +212,10 @@ img {
 .profile-img {
     border-radius: 10px;
     max-width: 200px;
+}
+
+.profile-details {
+    word-wrap: anywhere;
 }
 
 @keyframes fade-in {
